--- a/web-1.html
+++ b/web-1.html
@@ -268,27 +268,27 @@
         </ul>
         <ul class="bottom">
             <h3>ABOUT US</h3>
-            <li><a href="http.//www.baidu.com">About us</a></li>
-            <li><a href="http.//www.baidu.com">Features</a></li>
-            <li><a href="http.//www.baidu.com">Privacy police</a></li>
-            <li><a href="http.//www.baidu.com">Terms &amp; Conditions</a></li>
+            <li><a href="http://www.baidu.com">About us</a></li>
+            <li><a href="http://www.baidu.com">Features</a></li>
+            <li><a href="http://www.baidu.com">Privacy police</a></li>
+            <li><a href="http://www.baidu.com">Terms &amp; Conditions</a></li>
         </ul>
         <ul class="bottom">
             <h3>SUPPORT</h3>
-            <li><a href="http.//www.baidu.com">FAQ</a></li>
-            <li><a href="http.//www.baidu.com">Contact us</a></li>
-            <li><a href="http.//www.baidu.com">Live chat</a></li>
-            <li><a href="http.//www.baidu.com">Phone call</a></li>
+            <li><a href="http://www.baidu.com">FAQ</a></li>
+            <li><a href="http://www.baidu.com">Contact us</a></li>
+            <li><a href="http://www.baidu.com">Live chat</a></li>
+            <li><a href="http://www.baidu.com">Phone call</a></li>
         </ul>
         <ul class="bottom" style="vertical-align: top">
             <h3>ENJOY YOUR LIFE</h3>
             <li class="last"><a href="http.//www.baidu.com">Great web UI kit for designers, freelancers or business.</a></li>
-            <a href="http.//www.baidu.com"><img src="./image/-1_22.png"></a>
-            <a href="http.//www.baidu.com"><img src="./image/-1_06.png"></a>
-            <a href="http.//www.baidu.com"><img src="./image/-1_34.png"></a>
-            <a href="http.//www.baidu.com"><img src="./image/-1_46.png"></a>
-            <a href="http.//www.baidu.com"><img src="./image/-1_50.png"></a>
-            <a href="http.//www.baidu.com"><img src="./image/-1_54.png"></a>
+            <a href="http://www.baidu.com"><img src="./image/-1_22.png"></a>
+            <a href="http://www.baidu.com"><img src="./image/-1_06.png"></a>
+            <a href="http://www.baidu.com"><img src="./image/-1_34.png"></a>
+            <a href="http://www.baidu.com"><img src="./image/-1_46.png"></a>
+            <a href="http://www.baidu.com"><img src="./image/-1_50.png"></a>
+            <a href="http://www.baidu.com"><img src="./image/-1_54.png"></a>
         </ul>
     </div>
 </body>
